# 42SH

./: .gitignore  Makefile.am  README.md  configure.ac
src/: 42sh.c  Makefile.am  README.MD
src/ast/: Makefile.am  node.c  node.h
src/eval_ast/: Makefile.am  builtin.c  builtin.h  eval_ast.c  eval_ast.h  redir.c  redir.h
src/io/: Makefile.am  io.c  io.h
src/lexer/: lexer.c  lexer.h  token.h
src/parser/: parser.c  parser.h
src/utils/: Makefile  Makefile.am  Makefile.in  dict.c  dict.h  expansion.c  expansion.h  stack.c  stack.h
src/utils/.deps/: libutils_a-dict.Po  libutils_a-expansion.Po  libutils_a-stack.Po
tests/: Makefile  Makefile.am  Makefile.in  script.sh  script_tower.sh  test_lexer.py  test_parser.sh
