SUBDIRS=src tests

clean-local:
	rm -rf a* com* d* i* m* config.* configure Makefile Makefile.in src/.deps src/lexer/.deps src/Makefile.in src/Makefile src/lexer/Makefile src/lexer/Makefile.in src/parser/Makefile.in src/ast/Makefile.in src/parser/Makefile src/42sh src/ast/Makefile configure~ src/io/.deps src/parser/.deps src/ast/.deps src/io/Makefile src/io/Makefile.in src/eval_ast/Makefile src/eval_ast/Makefile.in src/eval_ast/.deps conftest.dir src/utils/Makefile src/utils/.deps  src/utils/Makefile.in tests/Makefile.in tests/Makefile tests/.deps tests/out 42sh-1.0 42sh-1.0.tar.gz tests/trash tests/output.txt
